@@ -50,7 +50,7 @@ module Cucumber
       end
 
       def visit_scenario_name(keyword, name, file_colon_line, source_indent)   
-        scenario_name = name.strip.delete('.\r\n')
+        scenario_name = name.strip
         scenario_name = "Unnamed scenario" if name == ""
         @scenario = scenario_name
         @outline = keyword.include?('Scenario Outline')
